2005-10-11  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/al_mixer.h: only allow stripped down generic
	mixing if MMX is present

2005-10-06  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c: added MMX routine

	* src/arch/i386/x86_simd_support_prk.h,
	src/arch/i386/mixaudio16_mmx_prk.c:  moved common SIMD support code
	into above header file

2005-10-01  Prakash Punnoor <prakash@punnoor.de>

	* INSTALL: added instructions for using x86 SIMD

	* configure.ac: checks for MMX now

2005-09-30  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/Makefile.in, src/al_mixer.h, src/al_mixfunc.c,
	src/mixaudio16.c, src/mixaudio16.h, src/arch/i386/memcpy_mmx_prk.nasm,
	src/arch/i386/mixaudio16_mmx_prk.c, src/arch/i386/mixaudio16_mmx_prk.h:
	add MMX audio mixing

	* x86_cpu_caps_prk.c: fix OPENAL_DISABLE_SIMD handling and SIMD
	should only be enabled at runtime detection, if SIMD was enabled
	at compile time

2005-09-30  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Synched with CREDITS/AUTHORS changes.

	* AUTHORS: Added. This is the standard (autotools) name for such a
	file. Added a few more people to the list and sorted it
	alphabetically.

	* CREDITS: Removed.

2005-09-29  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac: fix up compilation on x86(_64) which I broke...

2005-09-29  Elias Naur <elias@oddlabs.com>

	* linux/src/al_filter.c: Added comment about the previous value
	of _AL_CUTTOFF_ATTENUATION and why it is now 0.

2005-09-28  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Cleaned up quotations. The whole file is still a
	bit of a mess, though...

2005-09-27  Prakash Punnoor <prakash@punnoor.de>

	* src/al_mixfunc.c, src/al_mixfunc.h, src/al_mixmanager.c:
	minor clean-ups and adding indirection for mixing n streams
	function

	* configure.ac, src/Makefile.in,
	src/arch/i386/x86_cpu_caps_detect_prk.nasm,
	src/arch/i386/x86_cpu_caps_prk.c,
	src/arch/i386/x86_cpu_caps_prk.h,